--- a/src/courier/DeliveryStaffDashboardPage.form
+++ b/src/courier/DeliveryStaffDashboardPage.form
@@ -74,6 +74,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Logout"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logoutbtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="deliveryorderbtn">
       <Properties>
