--- a/src/courier/SignUpPage.form
+++ b/src/courier/SignUpPage.form
@@ -162,9 +162,9 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="phonetxt" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="validationlbl" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
+                          <Component id="phonetxt" min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -183,7 +183,6 @@
                       <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="signupbtn" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="74" max="32767" attributes="0"/>
               <Component id="loginbtn" min="-2" max="-2" attributes="0"/>
@@ -261,6 +260,9 @@
           <Font name="Dialog" size="12" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="emailtxtKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="phonetxt">
       <Properties>
