the assigned delivery function worked #69issue

--- a/src/courier/OrderDetails.form
+++ b/src/courier/OrderDetails.form
@@ -628,6 +628,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="itempricetxt">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="itempricetxtKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="totaltxt">
     </Component>
