--- a/src/courier/ViewOrderDetails.form
+++ b/src/courier/ViewOrderDetails.form
@@ -514,10 +514,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="detailsOrderlbl" min="-2" pref="214" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="assignedperson1lbl" min="-2" pref="149" max="-2" attributes="0"/>
-                                  <EmptySpace min="451" pref="451" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="assignedperson1lbl" alignment="0" min="-2" pref="149" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -539,7 +536,7 @@
                           <Component id="deliveryidlbl" min="-2" pref="158" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="81" max="32767" attributes="0"/>
+                  <EmptySpace pref="85" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
@@ -575,42 +572,20 @@
                   </Group>
                   <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="widthlbl" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="lengthlbl" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="length1lbl" min="-2" pref="16" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="width1lbl" min="-2" pref="16" max="-2" attributes="0"/>
-                      </Group>
                       <Component id="shippingfee1lbl2" min="-2" pref="16" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" attributes="0">
                           <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="Wcmlbl" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="Lcmlbl" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="heightlbl" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="height1lbl" min="-2" pref="16" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
-                          <Component id="Hcmlbl" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="widthlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lengthlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="length1lbl" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                              <Component id="width1lbl" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                              <Component id="Wcmlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="Lcmlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="heightlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="height1lbl" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                              <Component id="Hcmlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
