address format store in textfile

--- a/src/courier/ViewOrderDetails.form
+++ b/src/courier/ViewOrderDetails.form
@@ -533,7 +533,7 @@
                           <Component id="deliveryidlbl" min="-2" pref="158" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="85" max="32767" attributes="0"/>
+                  <EmptySpace pref="81" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
@@ -547,7 +547,7 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                   <Component id="deliveryOrderlbl" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="38" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="idorderlbl" min="-2" max="-2" attributes="0"/>
                       <Component id="idcustlbl" min="-2" max="-2" attributes="0"/>
@@ -570,7 +570,7 @@
                   <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="shippingfee1lbl2" min="-2" pref="16" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="7" pref="7" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="widthlbl" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -621,7 +621,7 @@
                       <Component id="orderdetailslbl" min="-2" max="-2" attributes="0"/>
                       <Component id="detailsOrderlbl" min="-2" pref="92" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                  <EmptySpace pref="33" max="32767" attributes="0"/>
                   <Component id="deletebtn" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               </Group>
